<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:ignore="MergeRootFrame"
        tools:context=".view.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                    android:id="@+id/detail_event_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_image_view_height"
                    tools:src="@drawable/placeholder_nomoon"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/event_image_description"
                    android:adjustViewBounds="true"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/fragment_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
<!--            tools:context=".view.detail.DetailFragment"-->

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/detail_event_date"
                    android:text="@string/detail_event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/detail_text_view_vertical_margin"
                    android:layout_marginEnd="@dimen/detail_text_view_vertical_margin"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/textColor"/>

            <TextView
                    android:id="@+id/detail_event_title"
                    android:text="@string/event_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/detail_text_view_vertical_margin"
                    android:layout_marginEnd="@dimen/detail_text_view_vertical_margin"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/textColor"/>
            <TextView
                    android:id="@+id/detail_event_location"
                    android:text="@string/event_location_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/detail_text_view_vertical_margin"
                    android:layout_marginEnd="@dimen/detail_text_view_vertical_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/textColor"/>

            <TextView
                    android:id="@+id/detail_event_description"
                    android:text="@string/event_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="@dimen/detail_text_view_vertical_margin"
                    android:layout_marginEnd="@dimen/detail_text_view_vertical_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/textColor"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>