<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.activities.EventDetailActivity"
        tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                >

            <ImageView
                    android:id="@+id/detail_event_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mobile_image_view_height"
                    tools:src="@drawable/placeholder_nomoon"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/event_image_description"
                    android:adjustViewBounds="true"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"/>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activities.EventDetailActivity"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/detail_event_date"
                    android:text="@string/detail_event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mobile_detail_vertical_margin"
                    android:layout_marginEnd="@dimen/mobile_detail_vertical_margin"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/textColor"/>

            <TextView
                    android:id="@+id/detail_event_title"
                    android:text="@string/event_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mobile_detail_vertical_margin"
                    android:layout_marginEnd="@dimen/mobile_detail_vertical_margin"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/textColor"/>
            <TextView
                    android:id="@+id/detail_event_description"
                    android:text="@string/event_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mobile_detail_vertical_margin"
                    android:layout_marginEnd="@dimen/mobile_detail_vertical_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/textColor"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>